{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 227,
  "lineage": "afa73cad-b077-2e17-e98c-c7a058f38f50",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618596895564:subnet/subnet-60407304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-60407304",
            "map_public_ip_on_launch": true,
            "owner_id": "618596895564",
            "state": "available",
            "vpc_id": "vpc-041ee67f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618596895564:subnet/subnet-6a9bd745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-6a9bd745",
            "map_public_ip_on_launch": true,
            "owner_id": "618596895564",
            "state": "available",
            "vpc_id": "vpc-041ee67f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618596895564:subnet/subnet-4102160a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-4102160a",
            "map_public_ip_on_launch": true,
            "owner_id": "618596895564",
            "state": "available",
            "vpc_id": "vpc-041ee67f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618596895564:vpc/vpc-041ee67f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-13a6ee68",
            "default_route_table_id": "rtb-22e6005e",
            "default_security_group_id": "sg-231c6754",
            "dhcp_options_id": "dopt-888e3ef0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-041ee67f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-22e6005e",
            "owner_id": "618596895564"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:618596895564:instance/i-01a7e40db7fb800b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubeonedemo-host",
            "id": "i-01a7e40db7fb800b2",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubeonedemo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8857661cf0b0025",
            "private_dns": "ip-172-31-9-196.ec2.internal",
            "private_ip": "172.31.9.196",
            "public_dns": "ec2-3-218-145-199.compute-1.amazonaws.com",
            "public_ip": "3.218.145.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0c7ac35f2cbf613eb",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kubeonedemo-common",
              "kubeonedemo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-60407304",
            "tags": {
              "Name": "kubeonedemo-control_plane-1",
              "kubernetes.io/cluster/kubeonedemo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bd6e904a8fdf670",
              "sg-033527ad32950f50c"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:618596895564:instance/i-04485080b70111bbd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubeonedemo-host",
            "id": "i-04485080b70111bbd",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubeonedemo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-099332beda69dbf12",
            "private_dns": "ip-172-31-94-232.ec2.internal",
            "private_ip": "172.31.94.232",
            "public_dns": "ec2-3-88-178-117.compute-1.amazonaws.com",
            "public_ip": "3.88.178.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0fa19f350487d45cd",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kubeonedemo-common",
              "kubeonedemo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6a9bd745",
            "tags": {
              "Name": "kubeonedemo-control_plane-2",
              "kubernetes.io/cluster/kubeonedemo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bd6e904a8fdf670",
              "sg-033527ad32950f50c"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:618596895564:instance/i-009fa69a1466dcd2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubeonedemo-host",
            "id": "i-009fa69a1466dcd2b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubeonedemo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-083c3061dde180718",
            "private_dns": "ip-172-31-18-79.ec2.internal",
            "private_ip": "172.31.18.79",
            "public_dns": "ec2-54-83-109-35.compute-1.amazonaws.com",
            "public_ip": "54.83.109.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0db7459d7dc2a6c05",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kubeonedemo-common",
              "kubeonedemo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4102160a",
            "tags": {
              "Name": "kubeonedemo-control_plane-3",
              "kubernetes.io/cluster/kubeonedemo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bd6e904a8fdf670",
              "sg-033527ad32950f50c"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:loadbalancer/net/kubeonedemo-api-lb/f50a740913473e4b",
            "arn_suffix": "net/kubeonedemo-api-lb/f50a740913473e4b",
            "dns_name": "kubeonedemo-api-lb-f50a740913473e4b.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:618596895564:loadbalancer/net/kubeonedemo-api-lb/f50a740913473e4b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kubeonedemo-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4102160a"
              },
              {
                "subnet_id": "subnet-60407304"
              },
              {
                "subnet_id": "subnet-6a9bd745"
              }
            ],
            "subnets": [
              "subnet-4102160a",
              "subnet-60407304",
              "subnet-6a9bd745"
            ],
            "tags": {
              "Cluster": "kubeonedemo",
              "kubernetes.io/cluster/kubeonedemo": "shared"
            },
            "vpc_id": "vpc-041ee67f",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:listener/net/kubeonedemo-api-lb/f50a740913473e4b/30fa4119afaf16ad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:618596895564:listener/net/kubeonedemo-api-lb/f50a740913473e4b/30fa4119afaf16ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:loadbalancer/net/kubeonedemo-api-lb/f50a740913473e4b",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56",
            "arn_suffix": "targetgroup/kubeonedemo-api/5fc6b270f008cf56",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56",
            "lambda_multi_value_headers_enabled": false,
            "name": "kubeonedemo-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-041ee67f"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56-20200302163741611700000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56",
            "target_id": "i-01a7e40db7fb800b2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56-20200302163741687100000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56",
            "target_id": "i-04485080b70111bbd"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56-20200302163741889900000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:618596895564:targetgroup/kubeonedemo-api/5fc6b270f008cf56",
            "target_id": "i-009fa69a1466dcd2b"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618596895564:security-group/sg-033527ad32950f50c",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033527ad32950f50c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "kubeonedemo-common",
            "name_prefix": null,
            "owner_id": "618596895564",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/kubeonedemo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee67f"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618596895564:security-group/sg-00bd6e904a8fdf670",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-00bd6e904a8fdf670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubeonedemo-control_planes",
            "name_prefix": null,
            "owner_id": "618596895564",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/kubeonedemo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-041ee67f"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}